--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 <script src="https://kit.fontawesome.com/f0c41bb964.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/styles/portfolio.css">
+    <link rel="stylesheet" href="styles/portfolio.css">
 </head>
 <body>
     <header class="header">
@@ -33,7 +33,7 @@
                 <button class="download-btn"><i class="fa-solid fa-download"></i> Download CV</button>
                 <button class="call-btn"><i class="fa-solid fa-phone"></i> Contact</button>
             </div>
-                <img src="/images/hardy.png" alt="hardy">
+                <img src="images/hardy.png" alt="hardy">
             
         </section>
        <section class="about">
