--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <h1 class="section-title">What I Do</h1>
                 <div class="skill-detail">
                     <div class="skill-info">
-                        <img class="skill-icon" src="/images/icons/js.png">
+                        <img class="skill-icon" src="images/icons/js.png">
                         <h3 class="skill-title">Vanilla JavaScript</h3>
                         <p class="skill-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor, possimus vel. Consectetur, esse nostrum? Atque?
 
@@ -73,7 +73,7 @@
                     </div>
 
                     <div class="skill-info">
-                        <img class="skill-icon" src="/images/icons/react.png">
+                        <img class="skill-icon" src="images/icons/react.png">
                         <h3 class="skill-title">React</h3>
                         <p class="skill-description">Iusto minus hic perferendis laudantium deserunt nisi animi. Maiores accusamus ullam inventore vel repellat aspernatur.
 
@@ -81,7 +81,7 @@
                     </div>
 
                     <div class="skill-info">
-                        <img class="skill-icon" src="/images/icons/mongo.png">
+                        <img class="skill-icon" src="images/icons/mongo.png">
                         <h3 class="skill-title">Mongodb</h3>
                         <p class="skill-description">Repudiandae quo fugiat sapiente rerum maxime enim adipisci. Pariatur, accusamus molestiae sint neque cum ducimus.
 
@@ -89,7 +89,7 @@
                     </div>
 
                     <div class="skill-info">
-                        <img class="skill-icon" src="/images/icons/nodejs.png">
+                        <img class="skill-icon" src="images/icons/nodejs.png">
                         <h3 class="skill-title">Node JS</h3>
                         <p class="skill-description">Veritatis explicabo earum nisi voluptatibus ducimus, fugit perferendis iure ea perspiciatis error quas provident quidem!
 
@@ -192,9 +192,9 @@
                 <div class="lets-connect">
                     <h1 class="footer-title">Lets Connect</h1>
                     <p class="section-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
-                    <img src="/images/icons/facebook.png"  >
-                    <img src="/images/icons/twitter.png"  >
-                    <img src="/images/icons/insta.png"  >
+                    <img src="images/icons/facebook.png"  >
+                    <img src="images/icons/twitter.png"  >
+                    <img src="images/icons/insta.png"  >
                 </div>
 
                 <div class="lets-message">
